# clipboard-watcher

./: .gitignore  Cargo.toml  README.md  clipboard.toml  rustfmt.toml
.cargo/: config.toml
src/: binding.rs  cache.rs  config.rs  history.rs  main.rs  paragraph.rs  regex.rs  watcher.rs
