[package]
name = "clipboard-watcher"
version = "2.2.3"
homepage = "https://github.com/ferreira-tb/clipboard-watcher"
repository = "https://github.com/ferreira-tb/clipboard-watcher"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2024"
rust-version = "1.89"
publish = false

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = "symbols"
panic = "abort"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
crossterm = "0.29"
ratatui = "0.29"
regex = "1.11"
toml = "0.9"
walkdir = "2.5"

[dependencies.derive_more]
version = "2.0"
features = ["deref"]

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[lints.rust]
async_fn_in_trait = "allow"
dangling_pointers_from_temporaries = "deny"
unfulfilled_lint_expectations = "deny"
unsafe_op_in_unsafe_fn = "deny"
variant_size_differences = "warn"

[lints.clippy]
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
enum_glob_use = "allow"
filetype_is_file = "deny"
get_unwrap = "deny"
large_enum_variant = "deny"
map_unwrap_or = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_borrow = "deny"
needless_for_each = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"
struct_field_names = "allow"
unnecessary_safety_comment = "deny"
unsafe_derive_deserialize = "allow"
useless_conversion = "deny"

[lints.clippy.pedantic]
level = "deny"
priority = -1
